src/App.css
body {
  background-color: #343540;
}



#textbox {
  width: 33.33%;
  position: fixed;
  bottom: 1vh;
  left: 50%;
  transform: translateX(-50%);
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 0.5rem;
  
}

#query-input:focus {
  outline: none;
  box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
}

#submit-button {
  background-color: #007bff;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
  border-radius: 10px;
  border: none;
  height: 40px;
  width: 5em;
  color: #fff;
  font-size: 1rem;
  padding: 0;
  margin: 0;
  position: absolute;
  right: -5rem;
  box-sizing: border-box;
}

#query-input {
  width: 100%;
  resize: none;
  height: 40px;
  color: white;
  font-size: 1rem;
  padding: 0.5rem;
  border: none;
  background-color: #40414e;
  overflow-y: auto;
  border-radius: 10px;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
  transition: box-shadow 0.2s ease-in-out;
  box-sizing: border-box;
}


#submit-button:not(.loading):hover {
  cursor: pointer;
  background-color: #0069d9;
}


form div {
  display: flex;
  flex-direction: column;
  width: 100%;
}

label {
  margin-top: 1rem;
  color: white;
}

html, body, #root {
  height: 100%;
  margin: 0;
  position: relative;
}

#root {
  height: 100%;
  margin: 0;
  display: grid;
  justify-items: end;  
  align-items: center; 
  grid-gap: 5%; 
}

.box-container, .uploaded-files-container {
  height: 80vh;
  width: 45%;  
  padding: 10px;
  border-radius: 10px;
  background-color: #40414e;
}


.box-container {
  position: absolute;
  top: 50%; 
  transform: translateY(-50%); 
  right: 0.5vw;
  display: flex;
  flex-direction: column;
  padding: 10px;
  width: 53%;  
  height: 80vh; 
  overflow-y: auto;
  background: #40414e;
  border-radius: 10px;
  margin-left: 10px;
  
}






.box-content {
  max-width: 80%;
  padding: 10px;
  margin-bottom: 10px;
  border-radius: 20px;
  line-height: 1.4;
}

.box-content.user {
  align-self: flex-end;
  background-color: #29b62b; 
  color: white;
}

.box-content.server {
  align-self: flex-start;
  background-color: #007bff; 
  color: white;
}

.upload-container {
  display: flex;
  justify-content: center;
  align-items: center;
  position: fixed;
  top: 1vh;
  left: 50%;
  transform: translateX(-50%);
  gap: 0.5rem;
}



.file-box {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  border-radius: 10px;
  background-color: #40414e;
  color: white;
  max-height: 70vh;
  font-size: 1rem;
  padding: 0.5rem;
  margin: 10px 0;
  text-align: left;
  width: 300px;
  height: 20px;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}




.upload-button1 {
  background-color: #007bff;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
  border-radius: 10px;
  border: none;
  color: #fff;
 height: 40px;
  font-size: 1rem;
  padding: 0.5rem;
  margin: 10px 0;
  text-align: left;
  cursor: pointer;
}




.file-icon {
  margin-right: 10px;
}

.hidden-input {
  display: none;
}



.upload-button1:hover {
  cursor: pointer;

  box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
}

.icon {
width: 20px;
} 

